@@ -1,19 +1,14 @@
 #include "RealtimeClockStrategy.h"
 
-#include <time.h>     //for clock_t
+#include "rapidassist\time_.h"
 
 namespace testarduino
 {
-
-  static clock_t app_clock_init()
-  {
-    return ::clock();
-  }
-
-  static clock_t gClockAppStartTime = app_clock_init();
-
   RealtimeClockStrategy::RealtimeClockStrategy()
   {
+    //init both timers
+    millis();
+    micros();
   }
 
   RealtimeClockStrategy::~RealtimeClockStrategy()
@@ -26,38 +21,18 @@ namespace testarduino
     return _instance;
   }
 
-  double RealtimeClockStrategy::clockDiff(clock_t clockEnd, clock_t clockStart)
-  {
-    static double CLOCKS_PER_MS = CLOCKS_PER_SEC/1000.0;
-    clock_t diffticks=clockEnd-clockStart;
-    double diffms=(diffticks)/CLOCKS_PER_MS;
-    return diffms;
-  }
-
   uint32_t RealtimeClockStrategy::millis()
   {
-    clock_t now = ::clock();
-    double diffMs = clockDiff(now, testarduino::gClockAppStartTime);
-    uint32_t diffFinal = (uint32_t)diffMs;
-    return diffFinal;
+    double seconds = ra::time::getMillisecondsTimer();
+    uint32_t milliseconds = (uint32_t)seconds*1000;
+    return milliseconds;
   }
 
   uint32_t RealtimeClockStrategy::micros()
   {
-    //based on millis() implementation.
-
-    //copy millis() implementation
-    clock_t now = ::clock();
-    double diffMs = clockDiff(now, testarduino::gClockAppStartTime);
-    double diffMicros = diffMs * 1000;
-
-    static const uint32_t MAX_MICROS = (uint32_t)0xFFFFFFFF;
-    while(diffMicros > (double)MAX_MICROS)
-    {
-      diffMicros -= (double)(MAX_MICROS);
-    }
-    uint32_t finalMicros = (uint32_t)diffMicros;
-    return finalMicros;
+    double seconds = ra::time::getMicrosecondsTimer();
+    uint32_t microseconds = (uint32_t)seconds*1000*1000;
+    return microseconds;
   }
 
 } //testarduino
